# Home-Services-Lead-Generation

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .replit  ANALYTICS_USAGE.md  API_CLIENT_EXAMPLES.md  API_ROUTES_LISTING.md  AUSTIN_MANUAL_TESTING_SUMMARY.md  CLI_USAGE.md  COPILOT_ALLOWLIST_REQUEST.md  COUNTY_FIX_README.md  DATA_QUALITY_IMPLEMENTATION.md  DEPENDENCY_MIGRATION.md  DEPLOYMENT.md  DEPLOYMENT_NIXPACKS.md  ENVIRONMENT_SETUP_CHECKLISTS.md  ETL_ARTIFACTS_IMPLEMENTATION.md  ETL_IMPLEMENTATION_DETAILS.md  ETL_IMPLEMENTATION_SUMMARY.md  ETL_RUN_LOGGING_IMPLEMENTATION.md  FORECAST_DEPLOYMENT_GUIDE.md  FRONTEND_DATABASE_SETUP.md  GET_10_LIVE_LEADS_README.md  GITHUB_AGENT_SETUP.md  HARRIS_PERMITS_README.md  HEALTH_ENDPOINTS_IMPLEMENTATION.md  HOUSTON_ETL_MINT_LEADS_IMPLEMENTATION.md  HOUSTON_ETL_QUICKSTART.md  IMPLEMENTATION_E2E_TESTING.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_BACKUP_VALIDATION.md  INGEST_LOGGING_IMPLEMENTATION.md  LEADS_IMPLEMENTATION.md  Makefile  NEXTJS_API_ROUTES_ANALYSIS.md  NIXPACKS_OPTIMIZATION_SUMMARY.md  OPENAPI_IMPLEMENTATION_SUMMARY.md  PERMITS_PERMITS_INGEST_API.md  (+127 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  ai-review-guidelines.md  auto-merge.yml  auto-resolve.yml  dependabot.yml
artifacts/: source_health.json
attached_assets/: Pasted-ou-re-my-expert-dev-assistant-Fix-my-deployed-app-at-https-home-services-lead-generation-jtheoc80-1759623186170_1759623186171.txt
backend/: .env.example  .env.test  .gitignore  =2.6.0  Dockerfile  METRICS.md  README.md  app.py  apply_harris_migration.py  demo_env_vars.py  demo_export_security.py  demo_harris_normalization.py  main.py  requirements.txt  test_supabase.py  validate.py
config/: regions.yaml  registry.yaml  sources.yml  sources_tx.yaml
data/: yesterday.csv
data_quality/: __init__.py  permits_validation.py  permits_validation_old.py  tx_validation.py  validation_results.json
docs/: BACKUP_VALIDATION.md  CHANGELOG.md  DEBUG_API.md  DEPENDABOT.md  E2E_SUPABASE_DELTA.md  ETL_STATE_MANAGEMENT.md  GITHUB_ACTIONS_SECRETS.md  GITHUB_SECRETS.md  GIT_SECRETS_SETUP.md  MAINTAINER_WORKFLOW_INSTRUCTIONS.md  MERGE_CONFLICT_RESOLVER.md  QUALITY_GATE.md  REDIS_CHAOS_TESTING.md  SECURITY.md  SOURCE_HEALTH_CHECKS.md  STACK_MONITOR.md  STACK_MONITORING.md  SUPABASE_SCHEMA_ALIGNMENT.md  VISUAL_REGRESSION.md  WEBHOOK_SECRET_SETUP.md  bot-token.md  coh-etl-script.md  database-configuration-update.md  environment-variables.md  github-actions-runbook.md  harris-county-permits-endpoint.md  harris-county-permits-summary.md  multi-region-guide.md  nightly-etl-bot.md  ops-runbook.md  permit-scraping-api.md  permits_tx.md  self-hosted-runners.md  source-health-monitoring.md  sources_configuration.md  stack-monitor-ai-integration.md  supabase.md  tx_coverage.md  tx_permits.md  tx_permits_api.md  (+2 more)
frontend/: .dockerignore  .env.example  .env.local.example  .eslintrc.json  .gitignore  DOCKER.md  Dockerfile  ENVIRONMENT_VALIDATION_SUMMARY.md  README.md  SUPABASE_CLIENT_USAGE.md  SUPABASE_INTEGRATION.md  middleware.ts  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
great_expectations/: permits_validation.py  tx_validation.py  validation_suite.py
ingest/: __init__.py  arcgis.py  csv_http.py  csv_http_broken.py  run.py  socrata.py  state.py
lib/: __init__.py  entity_graph.py  feature_flags.py
logs/: etl-summary.json  test-summary.json
normalizers/: __init__.py  field_aliases.py  permits.py
permit_leads/: .env.example  README.md  __init__.py  __main__.py  config_loader.py  enrich.py  enrich_config.yaml  etl_state.py  export_leads.py  lead_export.py  main.py  main_old.py  migrate_contractors.py  migrate_db.py  normalizer.py  region_adapter.py  requirements.txt  test_contractors.py
pipelines/: __init__.py  derive_risk.py  load_raw.py  normalize.py  normalize_permits.py  publish.py
reports/: impact_projection.py
scoring/: __init__.py  v0.py
scripts/: E2E_SUPABASE_DELTA_README.md  HARRIS_ETL_README.md  HOUSTON_WEEKLY_README.md  README-houston-downloader.md  README.md  ai-autopr.js  audit-qb-shim.cjs  austin-socrata-manual-test.sh  check-react-mismatch.mjs  check-required-env.mjs  check_etl_freshness.py  check_permits_structure.ts  copy-paste-health-checks.sh  create_leads_from_permits.ts  create_sample_leads.ts  dallas_scrape.py  db-wire-shim.cjs  demo-botctl.ts  demo_arcgis_validation.ts  demo_leads_setup.ts  diagnose.sh  direct_insert_leads.ts  (+103 more)
(+525 files in other folders)
